--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -1,6 +1,7 @@
 html, body {
 	background-color: #FCFCFC;
-	min-width: 250px;
+	min-width: 365px;
+	min-height:220px;
 }
 .panel {
 	margin-bottom: 5px;
@@ -9,20 +10,48 @@ html, body {
 .default {
 	cursor: default;
 	color: #00000F;
+	margin-left:8px;
 	width: 250px;
-	margin-top: 2px;
+	padding-top:7px;
+    padding-bottom:2px;
+    margin-left: 20px;
+}
+.align {
+    font-weight:bold;
+    font-size:14px;
+    float:right;
+    margin-top:7px;
+}
+.menuWithIcon{
+	cursor: default;
+	color: #00000F;
+	width: 250px;
+	padding-top:2px;
+    padding-bottom:2px;
+    margin-left:8px;
 }
 .defaultOptions {
 	cursor: default;
 	color: #00000F;
 	width: 250px;
 	margin-top: 2px;
-	margin-left: 4px;
+	margin-left: 20px;
+}
+.guidelines {
+    display:none;
 }
 .panel-section-header .text-section-header {
 	color: #00000F;
 }
-.panel-list-item:hover {
+.panel-list-item {
+}
+icon-list-item-about {
+    margin-left: 20px;
+}
+.icon-list-item {
+    margin-left: 5px;
+}
+.icon-list-item:hover {
 	background-color: #EDEDF0;
 }
 .panel-section-body a {
@@ -30,10 +59,9 @@ html, body {
 	display: flex;
 }
 .item_icon {
-	margin-right: 6px;
-	height: 16px;
-	width: 16px;
-	vertical-align: middle;
+	height: 12px;
+	width: 12px;
+	margin-left:50px;
 }
 .item_icon_options {
 	margin-left: 12px;
@@ -41,16 +69,11 @@ html, body {
 	width: 16px;
 	vertical-align: middle;
 }
-.joinUS {
-	margin-top: 10px;
-	margin-left: 10px;
-	margin-bottom: 5px;
-	color: #88807F;
-	text-decoration: none;
-}
 .panel-section-separator {
 	margin-top: 5px;
+	margin-bottom: 5px;
 	color: #88807F;
+	margin-left: -20px;
 }
 .item_icon_right {
 	margin-left: 2px;
@@ -65,9 +88,9 @@ html, body {
 }
 .dropdown-container {
     display: none;
-		margin-left: auto;
-		margin-right: auto;
-		margin-top: auto;
-		margin-bottom: auto;
+    margin-left: auto;
+	margin-right: auto;
+	margin-top: auto;
+	margin-bottom: auto;
     background-color: #FCFCFC;
 }
